# faery-tale-rs

./: .clang-format  .env.example  .gitignore  .graphifyignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  DECODE.md  GUIDELINES.md  LICENSE.md  MANUAL.txt  Makefile  PLAN.md  RAG.md  README.md  RESEARCH.md  TODO.md  agent_defaults.toml  build.rs  faery.json  faery.toml  fincludes.c  fmain  fmain.c  fmain.h  fmain2.c  fmain2.h  ftale.h  github_issue_seed.md  hdrive.c  hdrive.h  iffsubs.c  iffsubs.h  macros.i  makefile  package-lock.json  package.json  plan_status.toml  research_index.toml  (+1 more)
.cargo/: config.toml
.githooks/: post-checkout  post-commit  pre-commit  pre-push
.github/: copilot-instructions.md
assets/: plan.md
docs/: ARCHITECTURE.md  AUDIT_PLAN.md  DEBUG_SPECIFICATION.md  GUIDELINES.md  PROBLEMS.md  README.md  REFERENCE.md  REQUIREMENTS.md  RESEARCH.md  SPECIFICATION.md  STORYLINE.md  audit_results.md  quest_db.json  world_db.json
game/: Faery Tale Adventure (MicroIllusions).adf
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
hero_screens/: simplescreenrecorder-2026-02-28_17.45.44.mkv
original/: amiga.h  copyimage.c  fincludes.c  fmain.c  fmain2.c  form.c  fsubs.asm  ftale.h  gdriver.asm  hdrive.c  iffsubs.c  mtrack.c  narr.asm  rtrack.c  terrain.c  text.c
proto/: faery_save.proto
reference/: ARCHITECTURE.md  CONTROLS.md  PROBLEMS.md  README.md  RESEARCH-ai-encounters.md  RESEARCH-data-structures.md  RESEARCH-input-movement.md  RESEARCH-items-world.md  RESEARCH-npcs-quests.md  RESEARCH-systems.md  RESEARCH-terrain-combat.md  RESEARCH.md  STORYLINE-npcs.md  STORYLINE-quests.md  STORYLINE-world-events.md  STORYLINE.md  quest_db.json
scripts/: agent_bootstrap.sh  check_docs_links.sh  plan_sync_check.sh  rag_demo.sh  rag_index.sh  refresh_issue_map.sh  sync_plan_from_github.sh  sync_rollup_issue_states.sh
src/: main.rs
tools/: .env.example  README.md  asset_common.py  check_md_links.py  decode_map_data.py  decode_savegame.py  extract_item_effects.py  extract_palettes.py  extract_quest_data.py  (+13 more)
(+445 files in other folders)
