[package]
name = "fmainrs"
version = "0.1.0"
edition = "2021"
default-run = "fmainrs"

[features]
default = ["debug-tui"]
# Terminal-based debug TUI (ratatui). Disable to drop the TUI and its
# ratatui dependency from release builds. When disabled, `--debug` prints
# a warning at startup and no console is opened.
debug-tui = ["dep:ratatui"]

[dependencies]
anyhow = "1"
bitflags = "2.11.0"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = { version = "0.29", optional = true }
dirs = "6.0.0"
prost = "0.13"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.9.10"

[dependencies.sdl2]
version = "0.37.0"
features = ["mixer"]

[[bin]]
name = "music_viz"
path = "src/bin/music_viz.rs"

[[bin]]
name = "vkbd"
path = "src/bin/vkbd.rs"


[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3.2.0"

[dev-dependencies]
tempfile = "3.26.0"
